@@ -518,7 +518,7 @@ dnl Check for broken versions of mingw-runtime compatability library
 #include <_mingw.h>
 #if defined(__MINGW64_VERSION_MAJOR)
 # if __MINGW64_VERSION_MAJOR < 3
-#  error Attempting to use mingw-runtime with broken vsnprintf and direct2d support
+#  error Attempting to use mingw-runtime with broken vsnprintf support
 # endif
 #elif __MINGW32_MAJOR_VERSION == 3 && __MINGW32_MINOR_VERSION < 15
 # error Attempting to use mingw-runtime with broken vsnprintf support
@@ -3337,10 +3337,6 @@ AS_IF([test "${enable_directx}" != "no"], [
     VLC_ADD_PLUGIN([direct3d9])
   ])
 
-  dnl Direct2D
-  AC_CHECK_HEADERS(d2d1.h, [
-    VLC_ADD_PLUGIN([direct2d])
-  ])
 ])
 
 dnl
