@@ -263,6 +263,7 @@ Removed modules
  * iOS Dialog Provider (use MobileVLCKit / TVVLCKit instead)
  * QuickTime decoder module (use native codecs)
  * BD access module (use libbluray)
+ * Direct2D module (use Direct3D11)
 
 
 Changes between 2.2.0 and 2.2.1:
